--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-imask": "^7.6.1",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.5"
