--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-imask": "^7.6.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.5"
